# brandora

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/llm/: client.py  prompts.py
backend/app/routers/: ads.py  brands.py  competitors.py  ideas.py
backend/app/services/: ad_analyzer.py  ad_scraper.py  brand_profiler.py  idea_generator.py
backend/scripts/: probe_apify.py  probe_output.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdCard.tsx  BrandPanel.tsx  CompetitorPanel.tsx  IdeasPanel.tsx
frontend/lib/: api.ts
